2003-04-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/distdir.am (distuninstallcheck, distcleancheck): Silent
	these rules, so that we don't confuse users by echoing
	"echo ERROR:..." commands which are not run.

2003-04-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_files): Augment the error message
	about AM_INIT_AUTOMAKE not found.
	Suggested by Bruno Haible.

2003-04-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Summarize recent fixes.

2003-04-10  Eric Siegerman  <eric_97@pobox.com>  (tiny change)

	* automake.texi (Public macros): Clarify that the new
	AM_INIT_AUTOMAKE variant is preferred, and the old one
	deprecated.  Copy-edit the rest of the AM_INIT_AUTOMAKE item.
	(Hello): Caution that the example uses the deprecated
	AC_INIT/AM_INIT_AUTOMAKE syntax, and xref to the discussion.

2003-04-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_installdirs): Rename as ...
	(handle_install): ... this.  Define maybe_BUILT_SOURCES.
	(generate_makefile): Adjust call to handle_install.
	* lib/am/install.am (install): Use %maybe_BUILT_SOURCES%.
	* automake.texi (Sources, Built sources example): BUILT_SOURCES
	is honored by `make install' too.
	* tests/check3.test: Make sure that `make install' also depends
	upon BUILT_SOURCES.
	Report from Alexander Turbov.

2003-04-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (check_trailing_slash): New function (variation on
	a patch by Peter Muir).  Diagnose whitespaces following trailing
	backslash.
	(read_am_file): Use it.
	* tests/backsl4.test: New file.
	* tests/Makefile.am (TESTS): Add backsl4.test.
	Reported by Peter Muir.

2003-03-29  Raja R Harinath  <harinath@cs.umn.edu>

	* tests/yacc8.test: Add a $sleep before modifying Makefile.am so
        that timestamp will change.

2003-03-23  Akim Demaille  <akim@epita.fr>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/tags.am (TAGS): Use --etags-include instead of --include,
	when supported by etags (Exuberant Ctags).