@@ -133,6 +133,11 @@ then
 	rm -rf $ro_dir_temp
 	test $create_status = 0 && exit 77
 	;;
+      runtest)
+	# DejaGnu's runtest program.
+	echo "$me: running runtest --version"
+	(runtest --version) || exit 77
+	;;
       tex)
         # No all versions of Tex support `--version', so we use
         # a configure check.
