@@ -1,3 +1,10 @@
+2003-04-17  Richard Dawe  <rich@phekda.freeserve.co.uk>
+
+	* tests/defs.in: Handle required=runtest, to detect runtest
+	from DejaGnu.
+	* tests/Makefile.am (TESTS): Add dejagnu3.test.
+	* tests/dejagnu3.test: New test.
+
 2003-04-15  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/am/distdir.am (distuninstallcheck, distcleancheck): Silent
